--- a/src/Assets/Styles/modal.less
+++ b/src/Assets/Styles/modal.less
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    z-index: 2;// this should show up on top of other content
 }
 
 .react-modal-content {
